openshift/dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: reactjs-openshift
  name: reactjs-openshift
spec:
  replicas: 1
  selector:
    app: reactjs-openshift
    deploymentconfig: reactjs-openshift
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: reactjs-openshift
        deploymentconfig: reactjs-openshift
    spec:
      containers:
        - image: $DOCKER_IMAGE
          imagePullPolicy: Always
          name: reactjs-openshift
          resources: {}
          terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30

  test: false
  triggers:
  - type: ConfigChange
